--- a/views/termekek.ejs
+++ b/views/termekek.ejs
@@ -63,7 +63,7 @@
           </div><br><br><br>
           <div style="float: right;">
             CVV: <br>
-            <input type="number" name="cvv" min="1" max="3"><br> 
+            <input type="number" name="cvv"><br> 
           </div>
         </fieldset>
         <div style="margin-left: 425px;">
@@ -72,6 +72,9 @@
         </div><br>
         <input type="submit" value="Vásárlás" style="margin-left: 535px;">
       </form>
+      <% for(let err of errors){ %>
+        <p style="color: red;"><%= err %></p>
+      <% } %>
     </fieldset>
 </body>
 </html>
